<resources>
    <string name="app_name">App menu</string>
    <string name="product">товары</string>
    <string name="service">услуги</string>
    <string name="app">Сделан на костытях</string>
    <string name="welcom">Добро пожаловать</string>
    <string name="arsh">arsh</string>
    <string name="repair">Ремонт ваших гаджетов</string>
    <string name="laptop_hp">LapTop HP price 500 $</string>
    <string name="legion_price_700">legion price 700 $</string>>
    <string name="app2">приложения</string>
    <string name="burger">Burger</string>
    <string name="donut">Donuts</string>
    <string name="hot_dog">Hot-Dog</string>
    <string name="Cleaning">Уборка вашего дома</string>
    <string name="Prog">Создание сайта</string>
</resources>