<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsiren"
    tools:context=".Service">



    <Button
        android:id="@+id/present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/repair"
        app:layout_constraintLeft_toRightOf="@+id/repair_tools"
        android:layout_marginLeft="15dp"/>

    <ImageView
        android:id="@+id/repair_tools"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/repair_tools"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/cleaning"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/cleaning"
        app:layout_constraintTop_toBottomOf="@id/repair_tools"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <Button
        android:id="@+id/Clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/cleaning"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toTopOf="@id/present"
        android:text="@string/Cleaning"
        android:textSize="20sp"
        android:layout_marginStart="15dp">
    </Button>

    <ImageView
        android:id="@+id/programmer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/programmer"
        app:layout_constraintTop_toBottomOf="@id/cleaning"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/programmer"
        app:layout_constraintTop_toBottomOf="@id/Clean"
        android:layout_marginTop="100dp"
        android:text="@string/Prog"
        android:textSize="20sp"
        android:layout_marginLeft="15dp">

    </Button>










</androidx.constraintlayout.widget.ConstraintLayout>