<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enjo"
    tools:context=".product">


    <ImageView
        android:id="@+id/hp"
        android:src="@drawable/burger"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:src="@drawable/donuts"
        android:id="@+id/legion"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/hp"
        android:layout_marginStart="10dp" />


    <ImageView
        android:src="@drawable/hotdog"
        android:id="@+id/samsung"
        android:layout_width="130dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/legion"
        android:layout_marginStart="10dp"/>




    <TextView
    android:id="@+id/present"
        android:layout_marginTop="10dp"
    android:textSize="20sp"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:text="@string/burger"
    app:layout_constraintTop_toBottomOf="@id/hp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="10dp"
    android:textColorHighlight="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/presen2"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/donut"
        app:layout_constraintTop_toBottomOf="@id/legion"
        app:layout_constraintStart_toStartOf="@id/present"
        android:layout_marginStart="150dp"
        android:textColorHighlight="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/presen3"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/hot_dog"
        app:layout_constraintTop_toBottomOf="@id/samsung"
        app:layout_constraintStart_toStartOf="@id/presen2"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="10dp"
        android:textColorHighlight="@color/colorPrimaryDark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>